--- a/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meeting.html
+++ b/webapps/ROOT/WEB-INF/classes/templates/modules/meeting/edit_meeting.html
@@ -2037,7 +2037,7 @@
             <!--分页器-->
             <div class="cv_page_zone">
                 <el-pagination
-                    @current-change="handleCurrentChange2"
+                    @current-change="handleCurrentChange"
                     :current-page="pagination2.currPage"
                     :page-size="pagination2.pageSize"
                     layout="total, prev, pager, next, jumper"
